core/unpackaged/main/default/objects/Inventory_Location_Mapping__mdt/Inventory_Location_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps raw ERP inventory location codes to customer-friendly portal display names. Maintained by analysts in Salesforce Setup without code changes.</description>
    <label>Inventory Location Mapping</label>
    <pluralLabel>Inventory Location Mappings</pluralLabel>
</CustomObject>