core/unpackaged/main/default/objects/Inventory_Location_Mapping__mdt/fields/ERP_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Location_Code__c</fullName>
    <description>Unique alphanumeric code returned by the ERP integration payload (e.g. SC_01). Used as the lookup key for portal display name translation.</description>
    <label>ERP Location Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>