core/unpackaged/main/default/objects/Inventory_Location_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this mapping is evaluated during inventory display. Uncheck to deactivate without deleting the record (AC4).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>