core/unpackaged/main/default/objects/Inventory_Location_Mapping__mdt/fields/Is_Fallback_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Fallback_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the master fallback record. When no active mapping matches an ERP code, the Portal Display Name of this record is used as the base label (e.g. "Location Pending").</description>
    <label>Fallback Default</label>
    <type>Checkbox</type>
</CustomField>