core/unpackaged/main/default/objects/Inventory_Location_Mapping__mdt/fields/Portal_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_Display_Name__c</fullName>
    <description>Customer-friendly location name shown in the B2B portal inventory tooltip (e.g. Midwest – Corning, IA).</description>
    <label>Portal Display Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>