core/unpackaged/main/default/objects/Inventory_Location_Mapping__mdt/listViews/Analyst_View.listView-meta.xml
<ListView>
    <fullName>Analyst_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Is_Active__c</columns>
    <columns>Portal_Display_Name__c</columns>
    <columns>ERP_Location_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Analyst View</label>
</ListView>